src/test/deca/context/valid/created/type-return.deca
//Description :
// Test d'un bon type de return
//
// Resultats :
// Erreur


class A{
  protected boolean a;

  boolean printA(int a){
  return this.a;
  }


}
