src/test/deca/context/invalid/created/bad_type-return3.deca
//Description :
// Test d'un mauvais type de return
//
// Resultats :
// Erreur


class A{
 protected boolean a;
}

class B extends A{

  int getA(){
  return this.a;
  }
}
